adds bill's icon

--- a/src/app/system/system.component.html
+++ b/src/app/system/system.component.html
@@ -13,10 +13,10 @@
     </header>
     <aside class="system__aside" [ngClass]="{'system__aside--open' : isOpenMobileMenu}">
         <ul class="system__aside-list">
-            <li class="system__aside-item">Счёт</li>
-            <li class="system__aside-item">История</li>
-            <li class="system__aside-item">Планирование</li>
-            <li class="system__aside-item">Запись</li>
+            <li class="system__aside-item system__aside-item--bill">Счёт</li>
+            <li class="system__aside-item system__aside-item--history">История</li>
+            <li class="system__aside-item system__aside-item--planning">Планирование</li>
+            <li class="system__aside-item system__aside-item--record">Запись</li>
         </ul>
     </aside>
     <section class="system__section">
