--- a/src/app/system/system.component.scss
+++ b/src/app/system/system.component.scss
@@ -170,12 +170,29 @@
         @include ul-reset;
     }
     &__aside-item {
+        position: relative;
         display: block;
-        padding: 10px 20px;
+        padding: 10px 50px;
         &:hover,
         &:active,
         &:focus {
             background-color: darken($color: ($header_color), $amount: 10%)
+        }
+        &:before {
+            content: '';
+            position: absolute;
+            top: 10px;
+            left: 20px;
+            width: 20px;
+            height: 20px;
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: 20px 20px;
+        }
+        &--bill {
+            &::before {
+                background-image: url('/assets/img/bill.svg');
+            }
         }
     }
     &__section {
