--- a/src/app/system/system.component.scss
+++ b/src/app/system/system.component.scss
@@ -10,140 +10,6 @@
         grid-template-columns: 250px 1fr 1fr;
         grid-template-rows: 70px 1fr;
     }
-    &__header {
-        position: relative;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        width: 100vw;
-        height: 50px;
-        padding: 0 20px;
-        background-color: $header_color;
-        @media ($width-desktop) {
-            grid-column: 1 / 3;
-            grid-row: 1 / 2;
-            height: 70px;
-            padding: 0;
-        }
-    }
-    &__header-menu {
-        @include btn-reset();
-        position: relative;
-        width: 30px;
-        height: 3px;
-        background-color: $header_text_color;
-        border: none;
-        outline: none;
-        &:before {
-            content: '';
-            position: absolute;
-            top: -10px;
-            left: 0;
-            width: 30px;
-            height: 3px;
-            background-color: $header_text_color;
-            cursor: pointer;
-        }
-        &:after {
-            content: '';
-            position: absolute;
-            top: 10px;
-            left: 0;
-            width: 30px;
-            height: 3px;
-            background-color: $header_text_color;
-            cursor: pointer;
-        }
-        &--closed {
-            transform: rotate(45deg);
-            &:before {
-                top: 0;
-                left: 0;
-                transform: rotate(-90deg);
-            }
-            &:after {
-                display: none;
-            }
-        }
-        @media ($width-desktop) {
-            display: none;
-        }
-    }
-    &__header-logo {
-        @media ($width-desktop) {
-            margin: 50px;
-        }
-    }
-    &__header-user {
-        @include btn-reset();
-        position: relative;
-        width: 40px;
-        height: 30px;
-        background-image: url(../../assets/img/user.svg);
-        background-repeat: no-repeat;
-        background-position: 0 center;
-        &:after {
-            content: '';
-            position: absolute;
-            top: 14px;
-            right: -5px;
-            display: inline-block;
-            margin: 0 5px;
-            width: 0;
-            height: 0;
-            vertical-align: middle;
-            border-top: solid 5px $main_accent;
-            border-left: solid 5px transparent;
-            border-right: solid 5px transparent;
-            transform: rotate(180deg);
-            transition: transform 0.3s linear;
-        }
-        &--closed {
-            &::after {
-                transform: rotate(0deg);
-            }
-        }
-        @media ($width-desktop) {
-            margin: 50px;
-        }
-    }
-    &__header-nav {
-        position: absolute;
-        top: 0;
-        left: 0;
-        z-index: -1;
-        display: block;
-        width: 100vw;
-        height: auto;
-        background-color: $header_color;
-        transform: translateY(-50px);
-        transition: transform 0.2s linear;
-        @media ($width-desktop) {
-            right: 50px;
-            left: auto;
-            width: 250px;
-            height: 70px;
-            transform: translateY(-70px);
-        }
-        &--open {
-            transform: translateY(50px);
-            transition: transform 0.2s linear;
-            @media ($width-desktop) {
-                transform: translateY(70px);
-            }
-        }
-    }
-    &__header-link {
-        display: block;
-        padding: 10px 20px;
-        text-decoration: none;
-        color: $header_text_color;
-        &:hover,
-        &:active,
-        &:focus {
-            background-color: darken($color: ($header_color), $amount: 10%)
-        }
-    }
     &__aside {
         position: relative;
         z-index: -1;
@@ -192,6 +58,21 @@
         &--bill {
             &::before {
                 background-image: url('/assets/img/bill.svg');
+            }
+        }
+        &--history {
+            &::before {
+                background-image: url('/assets/img/history.svg');
+            }
+        }
+        &--planning {
+            &::before {
+                background-image: url('/assets/img/planning.svg');
+            }
+        }
+        &--add {
+            &::before {
+                background-image: url('/assets/img/add.svg');
             }
         }
     }
