--- a/src/app/system/shared/components/header/header.component.scss
+++ b/src/app/system/shared/components/header/header.component.scss
@@ -6,14 +6,11 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 100vw;
-    height: 50px;
+    width: 100%;
+    height: 100%;
     padding: 0 20px;
     background-color: $header_color;
     @media ($width-desktop) {
-        grid-column: 1 / 3;
-        grid-row: 1 / 2;
-        height: 70px;
         padding: 0;
     }
     &__menu {
@@ -64,7 +61,7 @@
             margin: 50px;
         }
     }
-    &__user {
+    &__user-menu {
         @include btn-reset();
         position: relative;
         width: 40px;
