--- a/src/app/system/system.component.scss
+++ b/src/app/system/system.component.scss
@@ -10,70 +10,23 @@
         grid-template-columns: 250px 1fr 1fr;
         grid-template-rows: 70px 1fr;
     }
+    &__header {
+        width: 100vw;
+        height: 50px;
+        @media ($width-desktop) {
+            grid-column: 1 / 3;
+            grid-row: 1 / 2;
+            height: 70px;
+        }
+    }
     &__aside {
-        position: relative;
-        z-index: -1;
         display: block;
         width: 100vw;
         height: auto;
-        background-color: $header_color;
-        transform: translateY(-100%);
-        transition: transform 0.2s linear;
-        &--open {
-            transform: translateY(0);
-            transition: transform 0.2s linear;
-        }
         @media ($width-desktop) {
-            position: static;
             grid-column: 1 / 2;
             grid-row: 2 / 3;
             width: 250px;
-            transform: none;
-            transition: none;
-        }
-    }
-    &__aside-list {
-        @include ul-reset;
-    }
-    &__aside-item {
-        position: relative;
-        display: block;
-        padding: 10px 50px;
-        &:hover,
-        &:active,
-        &:focus {
-            background-color: darken($color: ($header_color), $amount: 10%)
-        }
-        &:before {
-            content: '';
-            position: absolute;
-            top: 10px;
-            left: 20px;
-            width: 20px;
-            height: 20px;
-            background-repeat: no-repeat;
-            background-position: center;
-            background-size: 20px 20px;
-        }
-        &--bill {
-            &::before {
-                background-image: url('/assets/img/bill.svg');
-            }
-        }
-        &--history {
-            &::before {
-                background-image: url('/assets/img/history.svg');
-            }
-        }
-        &--planning {
-            &::before {
-                background-image: url('/assets/img/planning.svg');
-            }
-        }
-        &--add {
-            &::before {
-                background-image: url('/assets/img/add.svg');
-            }
         }
     }
     &__section {
