--- a/src/app/system/shared/components/aside/aside.component.html
+++ b/src/app/system/shared/components/aside/aside.component.html
@@ -1,8 +1,16 @@
 <aside class="aside" [ngClass]="{'aside--open' : isOpenMobileMenu}">
     <ul class="aside__list">
-        <li class="aside__list-item aside__list-item--bill">Счёт</li>
-        <li class="aside__list-item aside__list-item--history">История</li>
-        <li class="aside__list-item aside__list-item--planning">Планирование</li>
-        <li class="aside__list-item aside__list-item--add">Запись</li>
+        <li class="aside__list-item aside__list-item--bill">
+            <a></a>
+            Счёт</li>
+        <li class="aside__list-item aside__list-item--history">
+            <a></a>
+            История</li>
+        <li class="aside__list-item aside__list-item--planning">
+            <a></a>
+            Планирование</li>
+        <li class="aside__list-item aside__list-item--add">
+            <a></a>
+            Запись</li>
     </ul>
 </aside>
