--- a/src/app/system/shared/components/aside/aside.component.html
+++ b/src/app/system/shared/components/aside/aside.component.html
@@ -1,16 +1,16 @@
 <aside class="aside" [ngClass]="{'aside--open' : isOpenMobileMenu}">
     <ul class="aside__list">
         <li class="aside__list-item aside__list-item--bill">
-            <a></a>
-            Счёт</li>
+            <a>Счёт</a>
+        </li>
         <li class="aside__list-item aside__list-item--history">
-            <a></a>
-            История</li>
+            <a>История</a>
+        </li>
         <li class="aside__list-item aside__list-item--planning">
-            <a></a>
-            Планирование</li>
+            <a>Планирование</a>
+        </li>
         <li class="aside__list-item aside__list-item--add">
-            <a></a>
-            Запись</li>
+            <a>Запись</a>
+        </li>
     </ul>
 </aside>
