--- a/src/app/system/shared/components/aside/aside.component.html
+++ b/src/app/system/shared/components/aside/aside.component.html
@@ -1,16 +1,16 @@
 <aside class="aside" [ngClass]="{'aside--open' : isOpenMobileMenu}">
     <ul class="aside__list">
         <li class="aside__list-item aside__list-item--bill">
-            <a class="aside__item-link">Счёт</a>
+            <a routerLink="" class="aside__item-link">Счёт</a>
         </li>
         <li class="aside__list-item aside__list-item--history">
-            <a class="aside__item-link">История</a>
+            <a routerLink="" class="aside__item-link">История</a>
         </li>
         <li class="aside__list-item aside__list-item--planning">
-            <a class="aside__item-link">Планирование</a>
+            <a routerLink="" class="aside__item-link">Планирование</a>
         </li>
         <li class="aside__list-item aside__list-item--add">
-            <a class="aside__item-link">Запись</a>
+            <a routerLink="" class="aside__item-link">Запись</a>
         </li>
     </ul>
 </aside>
