--- a/src/app/system/shared/components/aside/aside.component.scss
+++ b/src/app/system/shared/components/aside/aside.component.scss
@@ -41,6 +41,9 @@
             background-repeat: no-repeat;
             background-position: center;
             background-size: 20px 20px;
+            &:hover {
+                background-color: $color_green;
+            }
         }
         &--bill {
             &::before {
