--- a/src/assets/style/_variables.scss
+++ b/src/assets/style/_variables.scss
@@ -12,7 +12,9 @@ $color_grey2: #ccc;
 $color_grey3: #667380;
 $color_grey4: #97a4b1;
 $color_grey5: #d7dde4;
+$color_grey6: #3a4651;
 $color_blue: #31a7c1;
+$color_blue2: #52bcd3;
 $color_white: #fff;
 $color_red: #fc7b7b;
 $color_green: #5bcda6;
@@ -20,6 +22,9 @@ $color_green: #5bcda6;
 $header_color: $color_grey5;
 $header_text_color: $color_grey;
 $main_accent: $color_blue;
+$aside_color: $color_grey6;
+$aside_text_color: $color_white;
+$aside_active_color: $color_blue2;
 // fonts
 $font-system: -apple-system,
 BlinkMacSystemFont,
