adds markup for bill's page

--- a/src/app/system/bill-page/bill-page.component.html
+++ b/src/app/system/bill-page/bill-page.component.html
@@ -1,1 +1,10 @@
-<p>bill-page works!</p>
+<section class="bill-page">
+    <div class="bill-page__wrapper">
+        <h2 class="bill-page__title">Страница счёта</h2>
+        <button class="btn bill-page__refresh">Обновить</button>
+    </div>
+    <div class="bill-page__wrapper bill-page__wrapper--card">
+        <app-bill-card></app-bill-card>
+        <app-currency-card></app-currency-card>
+    </div>
+</section>
