adds markup and styles for bill-card

--- a/src/app/system/bill-page/bill-card/bill-card.component.html
+++ b/src/app/system/bill-page/bill-card/bill-card.component.html
@@ -1,1 +1,19 @@
-<section class="bill-card"></section>
+<section class="bill-card">
+    <h3 class="bill-card__title">
+        Счёт
+    </h3>
+    <table class="bill-card__table">
+        <tr>
+            <td class="bill-card__table-cell bill-card__table-cell--icon"></td>
+            <td class="bill-card__table-cell bill-card__table-cell--count"></td>
+        </tr>
+        <tr>
+            <td class="bill-card__table-cell bill-card__table-cell--icon"></td>
+            <td class="bill-card__table-cell bill-card__table-cell--count"></td>
+        </tr>
+        <tr>
+            <td class="bill-card__table-cell bill-card__table-cell--icon"></td>
+            <td class="bill-card__table-cell bill-card__table-cell--count"></td>
+        </tr>
+    </table>
+</section>
