--- a/src/app/system/bill-page/bill-card/bill-card.component.scss
+++ b/src/app/system/bill-page/bill-card/bill-card.component.scss
@@ -1,2 +1,12 @@
 @import '../../../../assets/style/helpers';
-.bill-card {}
+.bill-card {
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    background-color: $card-color;
+    &__title {
+        margin: 0;
+        font-size: 20px;
+        color: $card-color-text;
+    }
+}
