--- a/src/app/system/bill-page/bill-page.component.scss
+++ b/src/app/system/bill-page/bill-page.component.scss
@@ -6,6 +6,7 @@
         justify-content: space-between;
         border-bottom: 1px solid $header_color;
         &--card {
+            margin-top: 20px;
             justify-content: flex-start;
         }
     }
