--- a/src/assets/style/_variables.scss
+++ b/src/assets/style/_variables.scss
@@ -13,7 +13,7 @@ $color_grey3: #667380;
 $color_grey4: #97a4b1;
 $color_grey5: #d7dde4;
 $color_grey6: #3a4651;
-$color_grey7 : #f0f3f6;
+$color_grey7: #f0f3f6;
 $color_blue: #31a7c1;
 $color_blue2: #52bcd3;
 $color_white: #fff;
@@ -27,6 +27,8 @@ $aside_color: $color_grey6;
 $aside_text_color: $color_white;
 $aside_active_color: $color_blue2;
 $main_color: $color_grey7;
+$card-color: $color_white;
+$card-color-text: $color_grey;
 // fonts
 $font-system: -apple-system,
 BlinkMacSystemFont,
