--- a/src/app/system/bill-page/bill-card/bill-card.component.scss
+++ b/src/app/system/bill-page/bill-card/bill-card.component.scss
@@ -1,12 +1,14 @@
 @import '../../../../assets/style/helpers';
 .bill-card {
-    width: 100%;
+    width: 95%;
     height: 100%;
     padding: 20px;
     background-color: $card-color;
+    border-radius: 8px;
     &__title {
         margin: 0;
         font-size: 20px;
+        font-weight: 500;
         color: $card-color-text;
     }
     &__table {}
