--- a/src/app/system/shared/components/aside/aside.component.html
+++ b/src/app/system/shared/components/aside/aside.component.html
@@ -1,25 +1,25 @@
 <aside class="aside" [ngClass]="{'aside--open' : isOpenMobileMenu}">
     <ul class="aside__list">
-        <li class="aside__list-item aside__list-item--bill" [routerLinkActive]="'aside__list-item--active'">
-            <a [routerLink]="['/system', 'bill']" class="aside__item-link">
+        <li class="aside__list-item aside__list-item--bill">
+            <a [routerLink]="['/system', 'bill']" class="aside__item-link" [routerLinkActive]="'aside__item-link--active'">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="#31a7c1"><path d="M12.164 7.165c-1.15.191-1.702 1.233-1.231 2.328.498 1.155 1.921 1.895 3.094 1.603 1.039-.257 1.519-1.252 1.069-2.295-.471-1.095-1.784-1.827-2.932-1.636zm1.484 2.998l.104.229-.219.045-.097-.219c-.226.041-.482.035-.719-.027l-.065-.387c.195.03.438.058.623.02l.125-.041c.221-.109.152-.387-.176-.453-.245-.054-.893-.014-1.135-.552-.136-.304-.035-.621.356-.766l-.108-.239.217-.045.104.229c.159-.026.345-.036.563-.017l.087.383c-.17-.021-.353-.041-.512-.008l-.06.016c-.309.082-.21.375.064.446.453.105.994.139 1.208.612.173.385-.028.648-.36.774zm10.312 1.057l-3.766-8.22c-6.178 4.004-13.007-.318-17.951 4.454l3.765 8.22c5.298-4.492 12.519-.238 17.952-4.454zm-2.803-1.852c-.375.521-.653 1.117-.819 1.741-3.593 1.094-7.891-.201-12.018 1.241-.667-.354-1.503-.576-2.189-.556l-1.135-2.487c.432-.525.772-1.325.918-2.094 3.399-1.226 7.652.155 12.198-1.401.521.346 1.13.597 1.73.721l1.315 2.835zm2.843 5.642c-6.857 3.941-12.399-1.424-19.5 5.99l-4.5-9.97 1.402-1.463 3.807 8.406-.002.007c7.445-5.595 11.195-1.176 18.109-4.563.294.648.565 1.332.684 1.593z"/></svg>                Счёт
 
             </a>
         </li>
-        <li class="aside__list-item aside__list-item--history" [routerLinkActive]="'aside__list-item--active'">
-            <a [routerLink]="['/system', 'history']" class="aside__item-link">
+        <li class="aside__list-item aside__list-item--history">
+            <a [routerLink]="['/system', 'history']" class="aside__item-link" [routerLinkActive]="'aside__item-link--active'">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="#31a7c1"><path d="M24 12c0 6.627-5.373 12-12 12s-12-5.373-12-12h2c0 5.514 4.486 10 10 10s10-4.486 10-10-4.486-10-10-10c-2.777 0-5.287 1.141-7.099 2.977l2.061 2.061-6.962 1.354 1.305-7.013 2.179 2.18c2.172-2.196 5.182-3.559 8.516-3.559 6.627 0 12 5.373 12 12zm-13-6v8h7v-2h-5v-6h-2z"/></svg>                История
 
             </a>
         </li>
-        <li class="aside__list-item aside__list-item--planning" [routerLinkActive]="'aside__list-item--active'">
-            <a [routerLink]="['/system', 'planning']" class="aside__item-link">
+        <li class="aside__list-item aside__list-item--planning">
+            <a [routerLink]="['/system', 'planning']" class="aside__item-link" [routerLinkActive]="'aside__item-link--active'">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="#31a7c1"><path d="M20 20h-4v-4h4v4zm-6-10h-4v4h4v-4zm6 0h-4v4h4v-4zm-12 6h-4v4h4v-4zm6 0h-4v4h4v-4zm-6-6h-4v4h4v-4zm16-8v22h-24v-22h3v1c0 1.103.897 2 2 2s2-.897 2-2v-1h10v1c0 1.103.897 2 2 2s2-.897 2-2v-1h3zm-2 6h-20v14h20v-14zm-2-7c0-.552-.447-1-1-1s-1 .448-1 1v2c0 .552.447 1 1 1s1-.448 1-1v-2zm-14 2c0 .552-.447 1-1 1s-1-.448-1-1v-2c0-.552.447-1 1-1s1 .448 1 1v2z"/></svg>                Планирование
 
             </a>
         </li>
-        <li class="aside__list-item aside__list-item--add" [routerLinkActive]="'aside__list-item--active'">
-            <a [routerLink]="['/system', 'records']" class="aside__item-link">
+        <li class="aside__list-item aside__list-item--add">
+            <a [routerLink]="['/system', 'records']" class="aside__item-link" [routerLinkActive]="'aside__item-link--active'">
                 <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd" fill="#31a7c1"><path d="M20 15h4.071v2h-4.071v4.071h-2v-4.071h-4.071v-2h4.071v-4.071h2v4.071zm-8 6h-12v-2h12v2zm0-4.024h-12v-2h12v2zm0-3.976h-12v-2h12v2zm12-4h-24v-2h24v2zm0-4h-24v-2h24v2z"/></svg>                Запись
 
             </a>
