--- a/src/app/system/bill-page/bill-card/bill-card.component.scss
+++ b/src/app/system/bill-page/bill-card/bill-card.component.scss
@@ -11,5 +11,8 @@
         font-weight: 500;
         color: $card-color-text;
     }
-    &__table {}
+    &__table {
+        width: 100%;
+        height: 100%;
+    }
 }
