adds styles for bill's card table

--- a/src/assets/style/_variables.scss
+++ b/src/assets/style/_variables.scss
@@ -29,6 +29,7 @@ $aside_active_color: $color_blue2;
 $main_color: $color_grey7;
 $card-color: $color_white;
 $card-color-text: $color_grey;
+$table-border-color: $color_grey5;
 // fonts
 $font-system: -apple-system,
 BlinkMacSystemFont,
