--- a/src/app/system/bill-page/bill-card/bill-card.component.scss
+++ b/src/app/system/bill-page/bill-card/bill-card.component.scss
@@ -13,6 +13,16 @@
     }
     &__table {
         width: 100%;
-        height: 100%;
+        height: 80%;
+    }
+    &__table-row {
+        height: 50px;
+        border-bottom: 2px solid $table-border-color;
+    }
+    &__table-cell {
+        color: $card-color-text;
+        &--icon {
+            text-align: center;
+        }
     }
 }
