--- a/src/app/system/bill-page/currency-card/currency-card.component.scss
+++ b/src/app/system/bill-page/currency-card/currency-card.component.scss
@@ -1,7 +1,34 @@
 @import '../../../../assets/style/helpers';
 .currency-card {
-    width: 100%;
+    width: 95%;
     height: 100%;
+    padding: 20px;
     background-color: $card-color;
     border-radius: 8px;
+    &__title {
+        margin: 0;
+        font-size: 20px;
+        font-weight: 500;
+        color: $card-color-text;
+    }
+    &__table {
+        width: 100%;
+        height: 80%;
+    }
+    &__table-row {
+        height: 57px;
+        border-bottom: 2px solid $table-border-color;
+        &--head {
+            border-bottom-width: 3px;
+            .currency-card__table-cell {
+                font-weight: 700;
+            }
+        }
+    }
+    &__table-cell {
+        color: $card-color-text;
+        &--icon {
+            text-align: center;
+        }
+    }
 }
