fixes styles for currency's card

--- a/src/app/system/bill-page/currency-card/currency-card.component.scss
+++ b/src/app/system/bill-page/currency-card/currency-card.component.scss
@@ -1,5 +1,8 @@
 @import '../../../../assets/style/helpers';
 .currency-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     width: 95%;
     height: 100%;
     padding: 20px;
