--- a/src/app/system/bill-page/bill-card/bill-card.component.scss
+++ b/src/app/system/bill-page/bill-card/bill-card.component.scss
@@ -1,6 +1,7 @@
 @import '../../../../assets/style/helpers';
 .bill-card {
-    width: 95%;
+    max-width: 95%;
+    min-width: 90%;
     height: 100%;
     padding: 20px;
     background-color: $card-color;
