--- a/src/app/system/bill-page/bill-page.component.scss
+++ b/src/app/system/bill-page/bill-page.component.scss
@@ -3,11 +3,11 @@
     padding: 20px 30px;
     &__wrapper {
         display: flex;
+        flex-wrap: wrap;
         justify-content: space-between;
         border-bottom: 1px solid $header_color;
         &--card {
             margin-top: 20px;
-            justify-content: flex-start;
         }
     }
     &__title {
@@ -33,7 +33,7 @@
         width: 100%;
         height: 100%;
         @media ($width-tablet) {
-            flex: 1 0 50%;
+            flex: 1 0 45%;
             height: 300px;
         }
     }
