--- a/src/app/system/bill-page/currency-card/currency-card.component.scss
+++ b/src/app/system/bill-page/currency-card/currency-card.component.scss
@@ -3,9 +3,11 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 95%;
+    max-width: 95%;
+    min-width: 90%;
     height: 100%;
     padding: 20px;
+    margin: 0;
     background-color: $card-color;
     border-radius: 8px;
     &__title {
