--- a/src/app/system/shared/components/header/header.component.html
+++ b/src/app/system/shared/components/header/header.component.html
@@ -3,6 +3,7 @@
     <a href="/">
         <img class="header__logo" src="../../assets/img/logo.svg" width="40" heigh="40" alt="Логотип Домашней бухгалтерии">
     </a>
+    <h1>Домашняя бухгалтерия</h1>
     <button class="header__user-menu" [ngClass]="{'header__user-menu--closed': isOpenUserMenu}" aria-label="Кнопка открытия меню" (click)="toggleUserMenu()"></button>
     <nav class="header__nav" [ngClass]="{'header__nav--open' : isOpenUserMenu}">
         <label class="header__label" for="dark-mode">
