adds all components for record's page

--- a/src/app/system/records-page/records-page.component.html
+++ b/src/app/system/records-page/records-page.component.html
@@ -1,1 +1,3 @@
-<p>records-page works!</p>
+<app-add-event></app-add-event>
+<app-add-category></app-add-category>
+<app-edit-category></app-edit-category>
