--- a/src/app/system/system.component.html
+++ b/src/app/system/system.component.html
@@ -1,6 +1,6 @@
 <main class="system">
     <app-header class="system__header"></app-header>
-    <app-aside class="system__aside"></app-aside>
+    <app-aside class="system__aside" [isOpenMobileMenu]=""></app-aside>
     <section class="system__section">
         <h1 class="visually-hidden">Домашняя бухгалтерия</h1>
         <router-outlet></router-outlet>
