adds styles for header

--- a/src/app/system/shared/components/header/header.component.scss
+++ b/src/app/system/shared/components/header/header.component.scss
@@ -14,13 +14,16 @@
         padding: 0;
     }
     &__title {
-        z-index: 100;
-        width: 200px;
-        margin-right: auto;
-        margin-left: 15px;
-        font-size: 25px;
-        font-weight: 400;
-        color: rgba($aside_text_color, 0.5);
+        display: none;
+        @media ($width-desktop) {
+            z-index: 100;
+            width: 200px;
+            margin-right: auto;
+            margin-left: 15px;
+            font-size: 25px;
+            font-weight: 400;
+            color: rgba($aside_text_color, 0.5);
+        }
     }
     &__menu {
         @include btn-reset();
