--- a/src/app/system/bill-page/bill-page.component.scss
+++ b/src/app/system/bill-page/bill-page.component.scss
@@ -1,6 +1,9 @@
 @import '../../../assets/style/_helpers';
 .bill-page {
-    padding: 20px 30px;
+    padding: 20px 10px;
+    @media ($width-tablet) {
+        padding: 20px 50px;
+    }
     &__wrapper {
         display: flex;
         flex-wrap: wrap;
@@ -8,6 +11,7 @@
         border-bottom: 1px solid $header_color;
         &--card {
             margin-top: 20px;
+            border-bottom: none;
         }
     }
     &__title {
