--- a/src/app/system/shared/components/aside/aside.component.scss
+++ b/src/app/system/shared/components/aside/aside.component.scss
@@ -2,19 +2,12 @@
 @import '../../../../../assets/style/mixins';
 @import '../../../../../assets/style/_visually-hidden';
 .aside {
-    position: relative;
-    z-index: -1;
     display: block;
     width: 100%;
     height: 100%;
     background-color: $header_color;
-    transform: translateY(-100%);
-    transition: transform 0.2s linear;
-    &--open {
-        transform: translateY(0);
-        transition: transform 0.2s linear;
-    }
     @media ($width-desktop) {
+        position: relative;
         z-index: 1;
         padding-top: 70px;
         transform: none;
@@ -28,9 +21,13 @@
         display: inline-flex;
         align-items: center;
         width: 100%;
-        padding: 10px 50px;
+        padding: 10px 20px;
         text-decoration: none;
-        color: rgba($aside_text_color, 0.5);
+        color: $header_text_color;
+        @media ($width-desktop) {
+            padding: 10px 50px;
+            color: rgba($aside_text_color, 0.5);
+        }
         svg {
             margin-right: 10px;
         }
