--- a/src/app/system/records-page/add-category/add-category.component.html
+++ b/src/app/system/records-page/add-category/add-category.component.html
@@ -1,7 +1,7 @@
-<div class="card">
+<section class="add-category">
     <div class="card-header bordered">
         <div class="header-block">
-            <h3 class="title">Добавить категорию</h3>
+            <h3 class="add-category__title">Добавить категорию</h3>
         </div>
     </div>
     <div class="card-block">
@@ -19,4 +19,4 @@
             <button type="submit" class="btn btn-primary">Добавить</button>
         </form>
     </div>
-</div>
+</section>
