--- a/src/app/system/records-page/add-event/add-event.component.html
+++ b/src/app/system/records-page/add-event/add-event.component.html
@@ -1,40 +1,26 @@
-<div class="card">
-    <div class="card-header bordered">
-        <div class="header-block">
-            <h3 class="title">Добавить событие</h3>
-        </div>
-    </div>
-    <div class="card-block">
-        <form>
-            <div class="form-group">
-                <label class="control-label" for="category">Выберите категорию</label>
-                <select class="form-control" id="category">
-                                                <option>Option one</option>
-                                                <option>Option two</option>
-                                                <option>Option three</option>
-                                                <option>Option four</option>
-                                            </select>
-            </div>
-            <div class="form-group">
-                <label class="control-label">Выберите тип</label>
-                <div>
-                    <label>
-                                                    <input class="radio" name="radios" type="radio">
-                                                    <span>Доход</span>
-                                                </label>
-                </div>
-                <div>
-                    <label>
-                                                    <input class="radio" name="radios" type="radio" checked>
-                                                    <span>Расход</span>
-                                                </label>
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="control-label" for="amount">Введите сумму</label>
-                <input type="number" value="0" id="amount" class="form-control">
-            </div>
-            <button type="submit" class="btn btn-primary">Добавить</button>
-        </form>
-    </div>
-</div>
+<section class="add-event">
+    <h3 class="add-event__title">Добавить событие</h3>
+    <form class="add-event__form">
+        <fieldset class="add-event__form-category">
+            <legend class="add-event__form-legend" for="category">Выберите категорию</legend>
+            <select class="add-event__form-select" id="category">
+                <option>Option one</option>
+                <option>Option two</option>
+                <option>Option three</option>
+                <option>Option four</option>
+            </select>
+        </fieldset>
+        <fieldset class="add-event__form-type">
+            <legend class="add-event__form-legend">Выберите тип</legend>
+            <label class="add-event__form-label" for="income">Доход</label>
+            <input id="income" class="add-event__form-radio" name="radios" type="radio">
+            <label class="add-event__form-label" for="outgo">Расход</label>
+            <input id="outgo" class="add-event__form-radio" name="radios" type="radio" checked>
+        </fieldset>
+        <fieldset class="add-event__form-sum">
+            <legend class="add-event__form-legend" for="amount">Введите сумму</legend>
+            <input type="number" value="0" id="amount" class="add-event__form-number">
+        </fieldset>
+        <button type="submit" class="btn add-event__form-btn" aria-label="Добавить категорию">Добавить</button>
+    </form>
+</section>
