--- a/src/app/system/records-page/add-event/add-event.component.scss
+++ b/src/app/system/records-page/add-event/add-event.component.scss
@@ -2,4 +2,11 @@
 .add-event {
     padding: 20px;
     background-color: $card-color;
+    border-radius: 8px;
+    &__title {
+        margin: 0;
+        font-size: 20px;
+        font-weight: 500;
+        color: $card-color-text;
+    }
 }
