adds common styles for cards

--- a/src/app/system/records-page/add-category/add-category.component.scss
+++ b/src/app/system/records-page/add-category/add-category.component.scss
@@ -1,5 +1,2 @@
 @import '../../../../assets/style/helpers';
-.add-category {
-    padding: 20px;
-    background-color: $card-color;
-}
+@import '../../../../assets/style/common/card';
