--- a/src/app/system/bill-page/bill-card/bill-card.component.scss
+++ b/src/app/system/bill-page/bill-card/bill-card.component.scss
@@ -1,29 +1,2 @@
 @import '../../../../assets/style/helpers';
-.bill-card {
-    max-width: 95%;
-    min-width: 90%;
-    height: 100%;
-    padding: 20px;
-    background-color: $card-color;
-    border-radius: 8px;
-    &__title {
-        margin: 0;
-        font-size: 20px;
-        font-weight: 500;
-        color: $card-color-text;
-    }
-    &__table {
-        width: 100%;
-        height: 80%;
-    }
-    &__table-row {
-        height: 50px;
-        border-bottom: 2px solid $table-border-color;
-    }
-    &__table-cell {
-        color: $card-color-text;
-        &--icon {
-            text-align: center;
-        }
-    }
-}
+@import '../../../../assets/style/common/card';
